# FlaskWebApp

./: .gitignore  main.py  notes.md  pyproject.toml
instance/: database.db
websie/: __init__.py  auth.py  models.py  views.py
websie/static/: index.js  style.css
websie/templates/: base.html  hello.html  home.html  login.html  searched.html  sign_up.html
websie/tests/functional/: test_users.py
websie/tests/unit/: test_models.py
