[tool.poetry]
name = "my-first-flask-app"
version = "0.1.0"
description = ""
authors = ["VS. <anaberrantis@gmail.com>"]
readme = "README.md"
packages = [{include = "my_first_flask_app"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.3"
flask-login = "^0.6.2"
flask-sqlalchemy = "^3.0.5"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
